Add SearchLocationsWithinRadius rest endpoint with pagination
