# model/Methods.go
@@ -6,16 +6,11 @@ import (
 	"github.com/kvendingoldo/gu-location-service/config"
 	guErrors "github.com/kvendingoldo/gu-location-service/internal/errors"
 	"github.com/kvendingoldo/gu-location-service/pkg/distance"
-
 	"time"
 )
 
-type Location struct {
-	ID          int64  `json:"id" example:"23" gorm:"primaryKey"`
-	UID         int64  `json:"uid" example:"12"` // gorm:foreignKey
-	Coordinates string `json:"coordinates" example:"39.12355, 27.64538"`
-
-	CreatedAt time.Time `json:"created_at,omitempty" example:"2021-02-24 20:19:39" gorm:"autoCreateTime:mili"`
+func (location *Location) TableName() string {
+	return "locations"
 }
 
 // UpdateLocation ... Update location
@@ -39,6 +34,59 @@ func UpdateLocation(location *Location) (err error) {
 	}
 
 	return
+}
+
+// SearchLocationsWithinRadius ... Search all users inside provided radius
+func SearchLocationsWithinRadius(centerCoordinates string, radius float64, pagination *Pagination) ([]Location, error) {
+	locations, err := GetLatestUserLocations(pagination)
+	if err != nil {
+		return []Location{}, err
+	}
+
+	result := []Location{}
+
+	for _, location := range locations {
+		coordinates := []string{
+			centerCoordinates,
+			location.Coordinates,
+		}
+
+		distanceKm, err := distance.CalculateDistanceInKm(coordinates)
+		if err != nil {
+			return []Location{}, err
+		}
+
+		if distanceKm <= radius {
+			result = append(result, location)
+		}
+	}
+
+	return result, nil
+}
+
+// GetLatestLocations ... Search all users inside of provided radius
+func GetLatestUserLocations(pagination *Pagination) ([]Location, error) {
+	var locations []Location
+
+	offset := (pagination.Page - 1) * pagination.Limit
+	queryBuider := config.Config.DB.Limit(pagination.Limit).Offset(offset).Order(pagination.Sort)
+
+	subQuery := config.Config.DB.
+		Model(&Location{}).
+		Select("uid, max(created_at) as created_at").Group("uid")
+
+	err := queryBuider.Debug().
+		Model(&Location{}).
+		Select("last_data.uid, coordinates, last_data.created_at").
+		Joins("inner join (?) as last_data on locations.uid = last_data.uid and locations.created_at = last_data.created_at", subQuery).
+		Find(&locations).
+		Error
+	if err != nil {
+		// TODO
+		fmt.Println(err)
+	}
+
+	return locations, nil
 }
 
 // GetDistance ... Get user distance in Km by range
